homework-20 (#11)
 - added Orders
 - added Genres
 - added Recommendations service
 - added Dockerfile and docker-compose.yml
