# homework-20/src/models/book.js
@@ -7,6 +7,10 @@ module.exports = (sequelize) => {
         through: 'BookAuthor',
         as: 'authors'
       });
+      this.belongsToMany(models.Genre, {
+        through: 'BookGenre',
+        as: 'genres'
+      });
       this.hasMany(models.Review, {
         foreignKey: {
           name: 'bookId'
@@ -18,6 +22,12 @@ module.exports = (sequelize) => {
           name: 'bookId'
         },
         as: 'authorIds'
+      });
+      this.hasOne(models.Stock, {
+        foreignKey: {
+          name: 'bookId'
+        },
+        as: 'stock'
       });
     }
 
